<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:background="@color/black"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/baseline_arrow_back_24"
            app:tint="@color/white"
            android:layout_marginStart="15dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="30dp"



            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/creeUnCompte"
            android:textSize="25dp"
            android:textColor="@color/white"
            android:layout_marginTop="18dp"

            />


    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nouveau_compte"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="20dp"
        android:textSize="20dp"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="30dp"
        >

        <ImageView
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:src="@drawable/person"
            android:layout_marginStart="15dp"
            android:layout_marginTop="8dp"
            />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/prenom"
            android:layout_marginEnd="20dp"
            android:id="@+id/prenominput"
            />

    </LinearLayout>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/nom"
        android:layout_marginStart="49dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="5dp"
        android:id="@+id/nominput"
        />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="55dp"
        >

        <ImageView
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:src="@drawable/baseline_email_24"
            android:layout_marginStart="14dp"
            android:layout_marginEnd="0dp"
            android:layout_marginTop="8dp"
            app:tint="@color/grey"

            />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:layout_marginEnd="20dp"
            android:id="@+id/emailinput"

            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="55dp"
        >

        <ImageView
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:src="@drawable/baseline_lock_open_24"
            android:layout_marginStart="13dp"
            android:layout_marginTop="5dp"
            app:tint="@color/grey"

            />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/mot_de_passe"
            android:layout_marginEnd="20dp"
            android:id="@+id/passwordinput"
            android:inputType="textPassword"

            />



    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        >

        <ImageView
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:src="@drawable/baseline_phone_24"
            app:tint="@color/grey"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="7dp"
            android:layout_marginTop="13dp"
            />

        <Spinner
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/spinner_code_num"
            android:layout_marginTop="10dp"
            android:entries="@array/pays"
            android:layout_marginStart="10dp"

            />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/mobile"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="7dp"
            android:id="@+id/telephoneinput"

            />


    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="30dp">

        <ImageView
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_marginStart="15dp"
            android:layout_marginTop="10dp"
            app:tint="@color/grey"/>

        <EditText
            android:id="@+id/etageinput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:hint="Étage"
            android:inputType="number"
            android:layout_marginTop="5dp"/>
    </LinearLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:text="@string/inscription"
        android:layout_gravity="center"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="60dp"
        android:textColor="@color/white"
        app:backgroundTint="@null"
        android:background="@drawable/button_square"
        android:id="@+id/loginbutton"
        />
</LinearLayout>